Fixed alignment of work page title

--- a/src/styles/WorkPage.css
+++ b/src/styles/WorkPage.css
@@ -54,6 +54,7 @@
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: .8vw;
+    text-align: center;
 }
 
 .imagegallery {
